2011-06-25  Andreas Becker  <becker@se-elektronic.de>

	* libc/time/mktime.c (mktime): Lock global timezone info while
	accessing it.

2011-06-14  Philip Munts  <phil@munts.net>

	* libc/time/asctime_r.c (asctime_r): Replace call to sprintf with call
	to siprintf.
	* libc/time/strftime.c: Define snprintf to sniprintf in multibyte case.
	* libc/time/tzset_r.c: Define sscanf to siscanf.

2011-06-14  Joseph Myers  <joseph@codesourcery.com>

	* configure.host: Don't handle ep9312, strongarm, xscale and thumb
	target names.
	* libc/machine/configure.in: Don't handle xscale target names.
	* libc/machine/configure: Regenerate.

2011-06-14  Craig Howland <howland@LGSInnovations.com>

	* libc/time/tzset_r.c (tzset_r):  Correct behavior for changing from
	non-GMT to GMT, when un-setting TZ.  Set _timezone and _daylight even
	if no DST is given in TZ.

2011-06-13  Eric Blake  <eblake@redhat.com>

	* libc/stdio/wsetup.c (__swsetup_r): Set errno on failure.
	* libc/stdio/fvwrite.c (__sfvwrite_r): Simplify.
	* libc/stdio/wbuf.c (__swbuf_r): Likewise.
	* libc/stdio/local.h (cantwrite): Adjust comment.

2011-06-09  Yaakov Selkowitz  <yselkowitz@...>

	* libc/include/string.h (strdupa): New macro function.
	(strndupa): New macro function.

2011-05-27  Nick Clifton  <nickc@redhat.com>

	* libc/sys/sysnecv850/sbrk.c (_sbrk): Tidy code.
	Base start of heap on the "heap_start" symbol.

2011-05-25  Eric Blake  <eblake@redhat.com>

	* libc/string/strerror.c (_strerror_r): Report "Success" for 0.

2011-05-25  Eric Blake  <eblake@redhat.com>

	* libc/string/strerror.c (strerror): Split body into...
	(_strerror_r): ...new reentrant function.
	* libc/string/u_strerr.c (_user_strerror): Update signature.
	* libc/include/string.h (_strerror_r): New prototype.
	* libc/posix/collate.c (__collate_err): Adjust callers.
	* libc/stdio/perror.c (_perror_r): Likewise.
	* libc/string/strerror_r.c (strerror_r): Likewise.
	* libc/string/xpg_strerror_r.c (__xpg_strerror_r): Likewise.
